[package]
name = "warehouse"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"

[lib]
name = "warehouse"

[dependencies]
structopt = "0.2"
config = "0.9"
env_logger = "0.6"
log = "0.4"
async-ssh = "0.1.2"
futures = "0.1"
thrussh = "0.19"
tokio-core = "0.1"
tokio-io = "0.1"
thrussh-keys = "0.9"